yacc.y
%{

	void yyerror(char *s);
	int yylex();

	#include<stdio.h>
	#include<stdlib.h>
	#include<ctype.h>
	FILE * test ;
	 char * symbols[3][100000] ; // 0 ->  NAME , 1 -> TYPE , 2 -> Value
	int symbolVal(char symbol);
	void updateSymbolVal(char symbol , int val);
%}
%union { char* string; char character; int integer_number ; float float_number; }

//Start   ----------------------------------------------->
%start code 


// tokens ---------------------------------------->
%token TYPE_INT 
%token TYPE_BOOL 
%token TYPE_CHAR 
%token TYPE_FLOAT  
%token TYPE_CONSTANT 
%token TYPE_STRING

%token KEYWORD_IF 
%token KEYWORD_ELSE 
%token KEYWORD_WHILE 
%token KEYWORD_DO 
%token KEYWORD_SWITCH 
%token KEYWORD_CASE
%token KEYWORD_DEFAULT
%token KEYWORD_BREAK 
%token KEYWORD_CONTINUE 
%token KEYWORD_FOR 

%token IDENTIFIER 

%token OPERATOR_PLUS 
%token OPERATOR_MINUS 
%token OPERATOR_MULTIPLY 
%token OPERATOR_DIVIDE 
%token OPERATOR_ASSIGNMENT 

%token LOGIC_AND 
%token LOGIC_OR 
%token LOGIC_NOT 

%token RELATION_EQUALS 
%token RELATION_NOTEQUAL 
%token RELATION_LESSER 
%token RELATION_GREATER 
%token RELATION_LESSEREQUAL 
%token RELATION_GREATEREQUAL

%token SCOPE_BRACEOPEN 
%token SCOPE_BRACECLOSE

%token ARGUMENT_OPENBRACKET 
%token ARGUMENT_CLOSEBRACKET 

%token SEMICOLON 
%token COMMA

%token VALUE_INT 
%token VALUE_FLOAT 
%token VALUE_BOOL 
%token VALUE_CHAR
%token VALUE_STRING

%token COLON 



  //end of tokens ---------------------------------------->
%right OPERATOR_ASSIGNMENT
%left LOGIC_NOT
%left LOGIC_AND LOGIC_OR
%left RELATION_EQUALS RELATION_NOTEQUAL RELATION_LESSER RELATION_GREATER RELATION_LESSEREQUAL RELATION_GREATEREQUAL
%left OPERATOR_PLUS OPERATOR_MINUS 
%left OPERATOR_MULTIPLY OPERATOR_DIVIDE 
%nonassoc IFX
%nonassoc KEYWORD_ELSE
//TYPES   ----------------------------------------->
/*
%type <boolean> conditional_statment  VALUE_BOOL
%type <string>  datatype 
%type <character> VALUE_CHAR
%type <integer_number> VALUE_INT
%type <float_number> VALUE_FLOAT
*/


%% 
code :  code line 
	| 
	;



 line   : exp SEMICOLON   {printf (" decleration \n");}
	| IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON	{printf( "initilization \n");}
	| SCOPE_BRACEOPEN code SCOPE_BRACECLOSE {printf("a scope decleration \n");}
	| KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET Inside_loops_statments {printf(" a while loop with braces\n");}  // the while loop
	| KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line {printf(" a while loop has one line \n");}  // the while loop
	| KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET SEMICOLON {printf(" a while loop has no lines \n");}  // the while loop
	
	| KEYWORD_DO   Inside_loops_statments  KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET  {printf("Do while loop \n");}// the do while loop
	| KEYWORD_DO   line  KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET  {printf("Do while loop \n");}// the do while loop
	
	| KEYWORD_SWITCH ARGUMENT_OPENBRACKET IDENTIFIER ARGUMENT_CLOSEBRACKET SCOPE_BRACEOPEN case_statment  KEYWORD_DEFAULT  COLON line KEYWORD_BREAK SEMICOLON case_statment SCOPE_BRACECLOSE                      {printf("a switch case statement");} // swithc case statment 
	
	| KEYWORD_FOR ARGUMENT_OPENBRACKET datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET Inside_loops_statments
	| KEYWORD_FOR ARGUMENT_OPENBRACKET datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET line
	
	| datatype IDENTIFIER SEMICOLON  					   {printf("Decleration \n");} // decleartion for variable
	| datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON {printf("ASSignment decleration \n");}
	
	| KEYWORD_IF ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line %prec IFX {printf( "if without else \n");}
	|KEYWORD_IF ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line KEYWORD_ELSE line {printf("if else statment \n");}
	
	|  datatype IDENTIFIER ARGUMENT_OPENBRACKET argument_variables ARGUMENT_CLOSEBRACKET SCOPE_BRACEOPEN code SCOPE_BRACECLOSE
	;


argument_variables : datatype IDENTIFIER |
		     datatype IDENTIFIER COMMA argument_variables 
		     |

 exp    :                    
	 exp OPERATOR_MULTIPLY exp                  {printf("multiplication statement \n");}
	| exp OPERATOR_DIVIDE exp                    {printf("division statement");}
	| exp OPERATOR_PLUS exp                        {printf("plus statement");} // + 
        | exp OPERATOR_MINUS exp			{printf("minus statement");}
	| ARGUMENT_OPENBRACKET exp ARGUMENT_CLOSEBRACKET {printf(" argument experation \n");}
	| value 
        ;



Inside_loops_statments :
		 SCOPE_BRACEOPEN code Inside_loops_statments SCOPE_BRACECLOSE
		 |KEYWORD_CONTINUE SEMICOLON
		 |KEYWORD_BREAK SEMICOLON
		 
		;



case_statment : 
		KEYWORD_CASE value COLON line KEYWORD_BREAK SEMICOLON case_statment   {printf("CAse statemnent");}
		| 
		;



datatype: TYPE_INT    //{$$= "int"} {prinf("\n TYPE_INT");}
	| TYPE_BOOL //{$$= "boolean"}
	| TYPE_CHAR //{$$= "char"}
	| TYPE_FLOAT //{$$= "float"}
	| TYPE_CONSTANT datatype // {$$= "constant"}
	| TYPE_STRING //{$$= "string"}
	
	;

value   : 
	  IDENTIFIER  {printf("iDENtufier \n");}
	| VALUE_INT  {printf("integer value \n");}
	| VALUE_FLOAT {printf("float value \n");}
	| VALUE_BOOL {printf("boolean value \n");}
	| VALUE_CHAR {printf("char value \n");}
	| OPERATOR_MINUS value
	| OPERATOR_PLUS value
	
	
	;

conditional_statment :
		       exp
		     | exp RELATION_GREATER exp {printf(" greater than statement \n");}
		     | exp RELATION_LESSER exp {printf(" lesser than statement \n");}
		     | exp RELATION_EQUALS exp  {printf(" equal statement \n");}
		     | exp RELATION_NOTEQUAL exp  {printf(" not equal statement \n");}
		     | exp RELATION_LESSEREQUAL exp  {printf(" less equal than statement \n");}
		     | exp RELATION_GREATEREQUAL exp {printf(" greater equal than statement \n");}
		     |  conditional_statment LOGIC_AND conditional_statment {printf(" AND statement \n");}
		     |	 conditional_statment LOGIC_OR conditional_statment {printf(" OR statement \n");}
		     |  LOGIC_NOT conditional_statment  {printf(" LOGICAL NOT statement \n");}
		     //| ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET 
			
		;
%%

void yyerror(char *s) {
    fprintf(stdout, "%s\n", s);
}


int main (void)
{

test = fopen("testfile.txt","r");
if(!yyparse())

{
printf("\n Parsing complete \n");
}
else
{
printf("\n Parsing faild \n");
}
fclose(test);
return 0;

}
