y.output
Terminals unused in grammar

   VALUE_STRING


Grammar

    0 $accept: code $end

    1 code: code line
    2     | /* empty */

    3 line: exp SEMICOLON
    4     | IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON
    5     | SCOPE_BRACEOPEN code SCOPE_BRACECLOSE
    6     | KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET Inside_loops_statments
    7     | KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line
    8     | KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET SEMICOLON
    9     | KEYWORD_DO SCOPE_BRACEOPEN Inside_loops_statments SCOPE_BRACECLOSE KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET
   10     | KEYWORD_SWITCH ARGUMENT_OPENBRACKET IDENTIFIER ARGUMENT_CLOSEBRACKET SCOPE_BRACEOPEN case_statment KEYWORD_DEFAULT COLON line KEYWORD_BREAK SEMICOLON case_statment SCOPE_BRACECLOSE
   11     | KEYWORD_FOR ARGUMENT_OPENBRACKET datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET Inside_loops_statments
   12     | KEYWORD_FOR ARGUMENT_OPENBRACKET datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET line
   13     | datatype IDENTIFIER SEMICOLON
   14     | datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON
   15     | KEYWORD_IF ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line
   16     | KEYWORD_IF ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line KEYWORD_ELSE line

   17 exp: exp OPERATOR_MULTIPLY exp
   18    | exp OPERATOR_DIVIDE exp
   19    | exp OPERATOR_PLUS exp
   20    | exp OPERATOR_MINUS exp
   21    | ARGUMENT_OPENBRACKET exp ARGUMENT_CLOSEBRACKET
   22    | value

   23 Inside_loops_statments: SCOPE_BRACEOPEN code Inside_loops_statments SCOPE_BRACECLOSE
   24                       | KEYWORD_CONTINUE SEMICOLON
   25                       | KEYWORD_BREAK SEMICOLON

   26 case_statment: KEYWORD_CASE value COLON line KEYWORD_BREAK SEMICOLON case_statment
   27              | /* empty */

   28 datatype: TYPE_INT
   29         | TYPE_BOOL
   30         | TYPE_CHAR
   31         | TYPE_FLOAT
   32         | TYPE_CONSTANT datatype
   33         | TYPE_STRING

   34 value: IDENTIFIER
   35      | VALUE_INT
   36      | VALUE_FLOAT
   37      | VALUE_BOOL
   38      | VALUE_CHAR
   39      | OPERATOR_MINUS value
   40      | OPERATOR_PLUS value

   41 conditional_statment: exp
   42                     | exp RELATION_GREATER exp
   43                     | exp RELATION_LESSER exp
   44                     | exp RELATION_EQUALS exp
   45                     | exp RELATION_NOTEQUAL exp
   46                     | exp RELATION_LESSEREQUAL exp
   47                     | exp RELATION_GREATEREQUAL exp
   48                     | conditional_statment LOGIC_AND conditional_statment
   49                     | conditional_statment LOGIC_OR conditional_statment
   50                     | LOGIC_NOT conditional_statment


Terminals, with rules where they appear

$end (0) 0
error (256)
TYPE_INT (258) 28
TYPE_BOOL (259) 29
TYPE_CHAR (260) 30
TYPE_FLOAT (261) 31
TYPE_CONSTANT (262) 32
TYPE_STRING (263) 33
KEYWORD_IF (264) 15 16
KEYWORD_ELSE (265) 16
KEYWORD_WHILE (266) 6 7 8 9
KEYWORD_DO (267) 9
KEYWORD_SWITCH (268) 10
KEYWORD_CASE (269) 26
KEYWORD_DEFAULT (270) 10
KEYWORD_BREAK (271) 10 25 26
KEYWORD_CONTINUE (272) 24
KEYWORD_FOR (273) 11 12
IDENTIFIER (274) 4 10 11 12 13 14 34
OPERATOR_PLUS (275) 19 40
OPERATOR_MINUS (276) 20 39
OPERATOR_MULTIPLY (277) 17
OPERATOR_DIVIDE (278) 18
OPERATOR_ASSIGNMENT (279) 4 11 12 14
LOGIC_AND (280) 48
LOGIC_OR (281) 49
LOGIC_NOT (282) 50
RELATION_EQUALS (283) 44
RELATION_NOTEQUAL (284) 45
RELATION_LESSER (285) 43
RELATION_GREATER (286) 42
RELATION_LESSEREQUAL (287) 46
RELATION_GREATEREQUAL (288) 47
SCOPE_BRACEOPEN (289) 5 9 10 23
SCOPE_BRACECLOSE (290) 5 9 10 23
ARGUMENT_OPENBRACKET (291) 6 7 8 9 10 11 12 15 16 21
ARGUMENT_CLOSEBRACKET (292) 6 7 8 9 10 11 12 15 16 21
SEMICOLON (293) 3 4 8 10 11 12 13 14 24 25 26
VALUE_INT (294) 35
VALUE_FLOAT (295) 36
VALUE_BOOL (296) 37
VALUE_CHAR (297) 38
VALUE_STRING (298)
COLON (299) 10 26
IFX (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
code (47)
    on left: 1 2, on right: 0 1 5 23
line (48)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 1 7 10 12
    15 16 26
exp (49)
    on left: 17 18 19 20 21 22, on right: 3 4 11 12 14 17 18 19 20
    21 41 42 43 44 45 46 47
Inside_loops_statments (50)
    on left: 23 24 25, on right: 6 9 11 23
case_statment (51)
    on left: 26 27, on right: 10 26
datatype (52)
    on left: 28 29 30 31 32 33, on right: 11 12 13 14 32
value (53)
    on left: 34 35 36 37 38 39 40, on right: 22 26 39 40
conditional_statment (54)
    on left: 41 42 43 44 45 46 47 48 49 50, on right: 6 7 8 9 11 12
    15 16 48 49 50


State 0

    0 $accept: . code $end

    $default  reduce using rule 2 (code)

    code  go to state 1


State 1

    0 $accept: code . $end
    1 code: code . line

    $end                  shift, and go to state 2
    TYPE_INT              shift, and go to state 3
    TYPE_BOOL             shift, and go to state 4
    TYPE_CHAR             shift, and go to state 5
    TYPE_FLOAT            shift, and go to state 6
    TYPE_CONSTANT         shift, and go to state 7
    TYPE_STRING           shift, and go to state 8
    KEYWORD_IF            shift, and go to state 9
    KEYWORD_WHILE         shift, and go to state 10
    KEYWORD_DO            shift, and go to state 11
    KEYWORD_SWITCH        shift, and go to state 12
    KEYWORD_FOR           shift, and go to state 13
    IDENTIFIER            shift, and go to state 14
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    SCOPE_BRACEOPEN       shift, and go to state 17
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    line      go to state 23
    exp       go to state 24
    datatype  go to state 25
    value     go to state 26


State 2

    0 $accept: code $end .

    $default  accept


State 3

   28 datatype: TYPE_INT .

    $default  reduce using rule 28 (datatype)


State 4

   29 datatype: TYPE_BOOL .

    $default  reduce using rule 29 (datatype)


State 5

   30 datatype: TYPE_CHAR .

    $default  reduce using rule 30 (datatype)


State 6

   31 datatype: TYPE_FLOAT .

    $default  reduce using rule 31 (datatype)


State 7

   32 datatype: TYPE_CONSTANT . datatype

    TYPE_INT       shift, and go to state 3
    TYPE_BOOL      shift, and go to state 4
    TYPE_CHAR      shift, and go to state 5
    TYPE_FLOAT     shift, and go to state 6
    TYPE_CONSTANT  shift, and go to state 7
    TYPE_STRING    shift, and go to state 8

    datatype  go to state 27


State 8

   33 datatype: TYPE_STRING .

    $default  reduce using rule 33 (datatype)


State 9

   15 line: KEYWORD_IF . ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line
   16     | KEYWORD_IF . ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line KEYWORD_ELSE line

    ARGUMENT_OPENBRACKET  shift, and go to state 28


State 10

    6 line: KEYWORD_WHILE . ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET Inside_loops_statments
    7     | KEYWORD_WHILE . ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET line
    8     | KEYWORD_WHILE . ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET SEMICOLON

    ARGUMENT_OPENBRACKET  shift, and go to state 29


State 11

    9 line: KEYWORD_DO . SCOPE_BRACEOPEN Inside_loops_statments SCOPE_BRACECLOSE KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET

    SCOPE_BRACEOPEN  shift, and go to state 30


State 12

   10 line: KEYWORD_SWITCH . ARGUMENT_OPENBRACKET IDENTIFIER ARGUMENT_CLOSEBRACKET SCOPE_BRACEOPEN case_statment KEYWORD_DEFAULT COLON line KEYWORD_BREAK SEMICOLON case_statment SCOPE_BRACECLOSE

    ARGUMENT_OPENBRACKET  shift, and go to state 31


State 13

   11 line: KEYWORD_FOR . ARGUMENT_OPENBRACKET datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET Inside_loops_statments
   12     | KEYWORD_FOR . ARGUMENT_OPENBRACKET datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET line

    ARGUMENT_OPENBRACKET  shift, and go to state 32


State 14

    4 line: IDENTIFIER . OPERATOR_ASSIGNMENT exp SEMICOLON
   34 value: IDENTIFIER .

    OPERATOR_ASSIGNMENT  shift, and go to state 33

    $default  reduce using rule 34 (value)


State 15

   40 value: OPERATOR_PLUS . value

    IDENTIFIER      shift, and go to state 34
    OPERATOR_PLUS   shift, and go to state 15
    OPERATOR_MINUS  shift, and go to state 16
    VALUE_INT       shift, and go to state 19
    VALUE_FLOAT     shift, and go to state 20
    VALUE_BOOL      shift, and go to state 21
    VALUE_CHAR      shift, and go to state 22

    value  go to state 35


State 16

   39 value: OPERATOR_MINUS . value

    IDENTIFIER      shift, and go to state 34
    OPERATOR_PLUS   shift, and go to state 15
    OPERATOR_MINUS  shift, and go to state 16
    VALUE_INT       shift, and go to state 19
    VALUE_FLOAT     shift, and go to state 20
    VALUE_BOOL      shift, and go to state 21
    VALUE_CHAR      shift, and go to state 22

    value  go to state 36


State 17

    5 line: SCOPE_BRACEOPEN . code SCOPE_BRACECLOSE

    $default  reduce using rule 2 (code)

    code  go to state 37


State 18

   21 exp: ARGUMENT_OPENBRACKET . exp ARGUMENT_CLOSEBRACKET

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp    go to state 38
    value  go to state 26


State 19

   35 value: VALUE_INT .

    $default  reduce using rule 35 (value)


State 20

   36 value: VALUE_FLOAT .

    $default  reduce using rule 36 (value)


State 21

   37 value: VALUE_BOOL .

    $default  reduce using rule 37 (value)


State 22

   38 value: VALUE_CHAR .

    $default  reduce using rule 38 (value)


State 23

    1 code: code line .

    $default  reduce using rule 1 (code)


State 24

    3 line: exp . SEMICOLON
   17 exp: exp . OPERATOR_MULTIPLY exp
   18    | exp . OPERATOR_DIVIDE exp
   19    | exp . OPERATOR_PLUS exp
   20    | exp . OPERATOR_MINUS exp

    OPERATOR_PLUS      shift, and go to state 39
    OPERATOR_MINUS     shift, and go to state 40
    OPERATOR_MULTIPLY  shift, and go to state 41
    OPERATOR_DIVIDE    shift, and go to state 42
    SEMICOLON          shift, and go to state 43


State 25

   13 line: datatype . IDENTIFIER SEMICOLON
   14     | datatype . IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON

    IDENTIFIER  shift, and go to state 44


State 26

   22 exp: value .

    $default  reduce using rule 22 (exp)


State 27

   32 datatype: TYPE_CONSTANT datatype .

    $default  reduce using rule 32 (datatype)


State 28

   15 line: KEYWORD_IF ARGUMENT_OPENBRACKET . conditional_statment ARGUMENT_CLOSEBRACKET line
   16     | KEYWORD_IF ARGUMENT_OPENBRACKET . conditional_statment ARGUMENT_CLOSEBRACKET line KEYWORD_ELSE line

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    LOGIC_NOT             shift, and go to state 45
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp                   go to state 46
    value                 go to state 26
    conditional_statment  go to state 47


State 29

    6 line: KEYWORD_WHILE ARGUMENT_OPENBRACKET . conditional_statment ARGUMENT_CLOSEBRACKET Inside_loops_statments
    7     | KEYWORD_WHILE ARGUMENT_OPENBRACKET . conditional_statment ARGUMENT_CLOSEBRACKET line
    8     | KEYWORD_WHILE ARGUMENT_OPENBRACKET . conditional_statment ARGUMENT_CLOSEBRACKET SEMICOLON

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    LOGIC_NOT             shift, and go to state 45
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp                   go to state 46
    value                 go to state 26
    conditional_statment  go to state 48


State 30

    9 line: KEYWORD_DO SCOPE_BRACEOPEN . Inside_loops_statments SCOPE_BRACECLOSE KEYWORD_WHILE ARGUMENT_OPENBRACKET conditional_statment ARGUMENT_CLOSEBRACKET

    KEYWORD_BREAK     shift, and go to state 49
    KEYWORD_CONTINUE  shift, and go to state 50
    SCOPE_BRACEOPEN   shift, and go to state 51

    Inside_loops_statments  go to state 52


State 31

   10 line: KEYWORD_SWITCH ARGUMENT_OPENBRACKET . IDENTIFIER ARGUMENT_CLOSEBRACKET SCOPE_BRACEOPEN case_statment KEYWORD_DEFAULT COLON line KEYWORD_BREAK SEMICOLON case_statment SCOPE_BRACECLOSE

    IDENTIFIER  shift, and go to state 53


State 32

   11 line: KEYWORD_FOR ARGUMENT_OPENBRACKET . datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET Inside_loops_statments
   12     | KEYWORD_FOR ARGUMENT_OPENBRACKET . datatype IDENTIFIER OPERATOR_ASSIGNMENT exp SEMICOLON conditional_statment SEMICOLON IDENTIFIER OPERATOR_ASSIGNMENT exp ARGUMENT_CLOSEBRACKET line

    TYPE_INT       shift, and go to state 3
    TYPE_BOOL      shift, and go to state 4
    TYPE_CHAR      shift, and go to state 5
    TYPE_FLOAT     shift, and go to state 6
    TYPE_CONSTANT  shift, and go to state 7
    TYPE_STRING    shift, and go to state 8

    datatype  go to state 54


State 33

    4 line: IDENTIFIER OPERATOR_ASSIGNMENT . exp SEMICOLON

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp    go to state 55
    value  go to state 26


State 34

   34 value: IDENTIFIER .

    $default  reduce using rule 34 (value)


State 35

   40 value: OPERATOR_PLUS value .

    $default  reduce using rule 40 (value)


State 36

   39 value: OPERATOR_MINUS value .

    $default  reduce using rule 39 (value)


State 37

    1 code: code . line
    5 line: SCOPE_BRACEOPEN code . SCOPE_BRACECLOSE

    TYPE_INT              shift, and go to state 3
    TYPE_BOOL             shift, and go to state 4
    TYPE_CHAR             shift, and go to state 5
    TYPE_FLOAT            shift, and go to state 6
    TYPE_CONSTANT         shift, and go to state 7
    TYPE_STRING           shift, and go to state 8
    KEYWORD_IF            shift, and go to state 9
    KEYWORD_WHILE         shift, and go to state 10
    KEYWORD_DO            shift, and go to state 11
    KEYWORD_SWITCH        shift, and go to state 12
    KEYWORD_FOR           shift, and go to state 13
    IDENTIFIER            shift, and go to state 14
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    SCOPE_BRACEOPEN       shift, and go to state 17
    SCOPE_BRACECLOSE      shift, and go to state 56
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    line      go to state 23
    exp       go to state 24
    datatype  go to state 25
    value     go to state 26


State 38

   17 exp: exp . OPERATOR_MULTIPLY exp
   18    | exp . OPERATOR_DIVIDE exp
   19    | exp . OPERATOR_PLUS exp
   20    | exp . OPERATOR_MINUS exp
   21    | ARGUMENT_OPENBRACKET exp . ARGUMENT_CLOSEBRACKET

    OPERATOR_PLUS          shift, and go to state 39
    OPERATOR_MINUS         shift, and go to state 40
    OPERATOR_MULTIPLY      shift, and go to state 41
    OPERATOR_DIVIDE        shift, and go to state 42
    ARGUMENT_CLOSEBRACKET  shift, and go to state 57


State 39

   19 exp: exp OPERATOR_PLUS . exp

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp    go to state 58
    value  go to state 26


State 40

   20 exp: exp OPERATOR_MINUS . exp

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp    go to state 59
    value  go to state 26


State 41

   17 exp: exp OPERATOR_MULTIPLY . exp

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp    go to state 60
    value  go to state 26


State 42

   18 exp: exp OPERATOR_DIVIDE . exp

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp    go to state 61
    value  go to state 26


State 43

    3 line: exp SEMICOLON .

    $default  reduce using rule 3 (line)


State 44

   13 line: datatype IDENTIFIER . SEMICOLON
   14     | datatype IDENTIFIER . OPERATOR_ASSIGNMENT exp SEMICOLON

    OPERATOR_ASSIGNMENT  shift, and go to state 62
    SEMICOLON            shift, and go to state 63


State 45

   50 conditional_statment: LOGIC_NOT . conditional_statment

    IDENTIFIER            shift, and go to state 34
    OPERATOR_PLUS         shift, and go to state 15
    OPERATOR_MINUS        shift, and go to state 16
    LOGIC_NOT             shift, and go to state 45
    ARGUMENT_OPENBRACKET  shift, and go to state 18
    VALUE_INT             shift, and go to state 19
    VALUE_FLOAT           shift, and go to state 20
    VALUE_BOOL            shift, and go to state 21
    VALUE_CHAR            shift, and go to state 22

    exp                   go to state 46
    value                 go to state 26
    conditional_statment  go to state 64


State 46

   17 exp: exp . OPERATOR_MULTIPLY exp
   18    | exp . OPERATOR_DIVIDE exp
   19    | exp . OPERATOR_PLUS exp
   20    | exp . OPERATOR_MINUS exp
   41 conditional_statment: exp .
   42                     | exp . RELATION_GREATER exp
   43                     | exp . RELATION_LESSER exp
   44                     | exp . RELATION_EQUALS exp
   45                     | exp . RELATION_NOTEQUAL exp
   46                     | exp . RELATION_LESSEREQUAL exp
   47                     | exp . RELATION_GREATEREQUAL exp

    OPERATOR_PLUS          shift, and go to state 39
    OPERATOR_MINUS         shift, and go to state 40
    OPERATOR_MULTIPLY      shift, and go to state 41
    OPERATOR_DIVIDE        shift, and go to state 42
    RELATION_EQUALS        shift, and go to state 65
    RELATION_NOTEQUAL      shift, and go to state 66
    RELATION_LESSER        shift, and go to state 67
    RELATION_GREATER       shift, and go to state 68
    RELATION_LESSEREQUAL   shift, and go to state 69
    RELATION_GREATEREQUAL  shift, and go to state 70

    $default  reduce using rule 41 (conditional_statment)


State 47

   15 line: KEYWORD_IF ARGUMENT_OPENBRACKET conditional_statment . ARGUMENT_CLOSEBRACKET line
   16     | KEYWORD_IF ARGUMENT_OPENBRACKET conditional_statment . ARGUMENT_CLOSEBRACKET line KEYWORD_ELSE line
   48 conditional_statment: conditional_statment . LOGIC_AND conditional_statment
   49                     | conditional_statment . LOGIC_OR conditional_statment

    LOGIC_AND              shift, and go to state 71
    LOGIC_OR               shift, and go to state 72
    ARGUMENT_CLOSEBRACKET  shift, and go to state 73


State 48
